Marquee: fix for animation type scroll (#525)
[Issue] https://github.com/Samsung/TAU/issues/206
[Problem] Scroll style should allow to slide it from right to left
 starting from right edge.
[Solution] Added copy of content at the end of content
 - added `reset` method to unit tests (+3 assertion)
 - test for calculateEndToEnd gradient had too small size of marquee,
   size was changed to container 100px / text 300px
 - tests for _calculateTranslateFunctions.endToEnd have been changed
    because implementation of marquee has been change

--- a/src/css/profile/wearable/changeable/theme-circle/marquee.less
+++ b/src/css/profile/wearable/changeable/theme-circle/marquee.less
@@ -5,3 +5,17 @@
 .ui-arc-listview-text-content {
     margin-left: 0;
 }
+.ui-marquee-content {
+    &::after {
+        content: attr(title);
+        text-indent: 100 * @unit_base;
+        position: absolute;
+        display: none;
+    }
+    &.ui-visible {
+        padding-right: 100 * @unit_base;
+        &::after {
+            display: inline;
+        }
+    }    
+}
